[tool.poetry]
name = "streamlit-helloworld"
version = "0.1.0"
description = ""
authors = ["ryutah <6662577+ryutah@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
